--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "\n",
     "# Replace \"/User/your-service-account-key.json\" with the actual path to your service account key JSON file\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"/Users/inzamamahamedmoideen/Downloads/thermal-proton-415501-08d96de857f3.json\"\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = "*******",
     "\n",
     "# Now you can use Google Cloud client libraries, and they will use the credentials from the specified JSON file\n",
     "\n",
@@ -85,11 +85,11 @@
     "    return list_of_categories\n",
     "\n",
     "# Get your Twitter API credentials and enter them here\n",
-    "consumer_key = \"NxDyN9wjMoEotCsu0kvaGM6Qv\"\n",
-    "consumer_secret = \"hq61mYCUmjZjdj7B79VdO9qLzfNX3yAbB80Upau7clDvcXqnJz\"\n",
-    "access_key = \"2213402124-f9faofdwJXEJT84SAHttpRwXv1KA4XQwW0ZF7wH\"\n",
-    "access_secret = \"yCbbcjzh2ib5lppqt5aY5xjHXV1eStMgUOg424Gg8TNqb\"\n",
-    "bearer_token = \"AAAAAAAAAAAAAAAAAAAAACFOsQEAAAAAEQUAfEmQTSOFV75DtYLWhtz1L6I%3DbAoXPA9C4cow1qYoGoqG0o0WxapA8ZRO5QBcsK2l63j5EXO6sc\"\n",
+    "consumer_key = \"**********",
+    "consumer_secret = \"*********"\n",
+    "access_key = \"*************\"\n",
+    "access_secret = \"************\"\n",
+    "bearer_token = \"*****************\"\n",
     "\n",
     "def get_user_tweets_analyzed(username):\n",
     "    # Tokens\n",
