--- a/main.ipynb
+++ b/main.ipynb
@@ -9,8 +9,7 @@
     "import os\n",
     "\n",
     "# Replace \"/User/your-service-account-key.json\" with the actual path to your service account key JSON file\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = "*******",
-    "\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = "*******"\n",
     "# Now you can use Google Cloud client libraries, and they will use the credentials from the specified JSON file\n",
     "\n",
     "\n"
@@ -85,8 +84,8 @@
     "    return list_of_categories\n",
     "\n",
     "# Get your Twitter API credentials and enter them here\n",
-    "consumer_key = \"**********",
-    "consumer_secret = \"*********"\n",
+    "consumer_key = \"**********\"\n",
+    "consumer_secret = \"*********\"\n",
     "access_key = \"*************\"\n",
     "access_secret = \"************\"\n",
     "bearer_token = \"*****************\"\n",
