--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "\n",
     "# Replace \"/User/your-service-account-key.json\" with the actual path to your service account key JSON file\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = "*******\"\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"**********\"\n",
     "# Now you can use Google Cloud client libraries, and they will use the credentials from the specified JSON file\n",
     "\n",
     "\n"
